Fix menu not working on mobile

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -41,7 +41,4 @@
     padding: 0;
   }
 
-  .menuItem {
-
-  }
 }
